@@ -5,6 +5,8 @@ import static com.gurudev.aircnc.domain.trip.entity.TripStatus.RESERVED;
 import static com.gurudev.aircnc.domain.util.Fixture.createGuest;
 import static com.gurudev.aircnc.domain.util.Fixture.createHost;
 import static com.gurudev.aircnc.domain.util.Fixture.createRoom;
+import static com.gurudev.aircnc.domain.util.Fixture.createRoomPhoto;
+import static com.gurudev.aircnc.util.AssertionUtil.assertThatNotFoundException;
 import static java.time.LocalDate.now;
 import static java.time.Period.between;
 import static org.assertj.core.api.Assertions.assertThat;
@@ -12,6 +14,7 @@ import static org.assertj.core.api.Assertions.assertThat;
 import com.gurudev.aircnc.domain.member.entity.Member;
 import com.gurudev.aircnc.domain.member.service.MemberService;
 import com.gurudev.aircnc.domain.room.entity.Room;
+import com.gurudev.aircnc.domain.room.entity.RoomPhoto;
 import com.gurudev.aircnc.domain.room.service.RoomService;
 import com.gurudev.aircnc.domain.trip.entity.Trip;
 import java.time.LocalDate;
@@ -37,6 +40,7 @@ class TripServiceImplTest {
   private RoomService roomService;
 
   private Room room;
+  private RoomPhoto roomPhoto;
 
   private Member guest;
 
@@ -55,14 +59,14 @@ class TripServiceImplTest {
     memberService.register(host);
 
     room = createRoom(host);
-    roomService.register(room, Collections.emptyList());
+    roomPhoto = createRoomPhoto();
+    roomService.register(room, List.of(roomPhoto));
 
     guest = createGuest();
     memberService.register(guest);
 
     checkIn = now().plusDays(1);
     checkOut = now().plusDays(2);
-
     headCount = room.getCapacity();
     totalPrice = between(checkIn, checkOut).getDays() * room.getPricePerDay();
 
@@ -89,10 +93,27 @@ class TripServiceImplTest {
   }
 
   @Test
+  void 여행_상세_조회() {
+    Trip trip = tripService.getById(trip1.getId());
+
+    assertThat(trip).isEqualTo(trip1);
+    assertThat(trip.getGuest()).isEqualTo(guest);
+    assertThat(trip.getRoom()).isEqualTo(room);
+    assertThat(trip.getRoom().getRoomPhotos()).containsExactly(roomPhoto);
+  }
+
+  @Test
+  void 없는_아이디로_여행_상세_조회_실패() {
+    Long invalidTripId = -1L;
+
+    assertThatNotFoundException()
+        .isThrownBy(() -> tripService.getById(invalidTripId));
+  }
+
+  @Test
   void 예약_상태의_여행_취소_성공() {
     Trip cancelledTrip = tripService.cancel(guest, trip1.getId());
 
     assertThat(cancelledTrip.getStatus()).isEqualTo(CANCELLED);
   }
-
 }
